Performance e integracion